--- a/content/期末2.html
+++ b/content/期末2.html
@@ -140,10 +140,16 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">期末1 << <a href='期末1.html'>Previous</a> <br /><h1>期末2</h1>
-<p><span>Onshape零件繪製(零件圖+繪製過程)</span></p>
+<p><span>Onshape零件繪製(零件圖+繪製過程):</span></p>
 <p><span><img alt="" height="612" src="./../images/連桿圖.png" width="494"/></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
-<p><span></span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
+<p><span></span></p>
+<p><span>零件組裝:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/KLoDNQDgsd0" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span>Coppeliasim作動:</span></p>
+<p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
