--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -409,5 +409,12 @@ frameStops: {
 <p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學以及組長，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。也因為這次的功課使我更加熟悉Onshape</p>
 <p></p>
 <h2>期末2</h2>
-<p><span>Onshape零件繪製(零件圖+繪製過程)</span></p>
+<p><span>Onshape零件繪製(零件圖+繪製過程):</span></p>
 <p><span><img alt="" height="612" src="/images/連桿圖.png" width="494"/></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span>零件組裝:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/KLoDNQDgsd0" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span>Coppeliasim作動:</span></p>
+<p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
