--- a/content/期末2.html
+++ b/content/期末2.html
@@ -149,6 +149,7 @@ img.add_border {
 <p><span></span></p>
 <p><span></span></p>
 <p><span>Coppeliasim作動:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/Ds0PBMtLm4w" width="560"></iframe></span></p>
 <p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
         
     <!-- footer -->
