--- a/content/期末2.html
+++ b/content/期末2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='期末1.html'>期末1</a><li><a href='期末2.html'>期末2</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpage.html'>hwpage</a><li><a href='運動場景.html'>運動場景</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='Onshape安裝配置.html'>Onshape安裝配置</a><li><a href='Onshape操作流程.html'>Onshape操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='solvespace操作流程.html'>solvespace操作流程</a></li></ul><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='期末1.html'>期末1</a><li><a href='期末2.html'>期末2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">期末1 << <a href='期末1.html'>Previous</a> <br /><h1>期末2</h1>
+    <div id="tipue_search_content">期末1 << <a href='期末1.html'>Previous</a> <a href='期末總結.html'>Next</a> >> 期末總結<br /><h1>期末2</h1>
 <p><span>Onshape零件繪製(零件圖+繪製過程):</span></p>
 <p><span><img alt="" height="612" src="./../images/連桿圖.png" width="494"/></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
@@ -150,7 +150,9 @@ img.add_border {
 <p><span></span></p>
 <p><span>Coppeliasim作動:</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/Ds0PBMtLm4w" width="560"></iframe></span></p>
-<p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p><br />期末1 << <a href='期末1.html'>Previous</a> </div>
+<p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
+<p><span></span></p>
+<br />期末1 << <a href='期末1.html'>Previous</a> <a href='期末總結.html'>Next</a> >> 期末總結</div>
         
     <!-- footer -->
       <div class="container">
