--- a/content/期末總結.html
+++ b/content/期末總結.html
@@ -139,8 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='Onshape 繪圖.html'>Next</a> >> Onshape 繪圖<br /><h1>HW1</h1>
-<br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Onshape 繪圖.html'>Next</a> >> Onshape 繪圖</div>
+    <div id="tipue_search_content">期末2 << <a href='期末2.html'>Previous</a> <br /><h1>期末總結</h1><br />期末2 << <a href='期末2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
