--- a/config/content.htm
+++ b/config/content.htm
@@ -4,8 +4,8 @@
 <p>40923245</p>
 <p>網站倉儲: <a href="https://github.com/mdecourse/cad2021_hw">https://github.com/mdecourse/cad2021_hw</a></p>
 <p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p>
-<h1>Task</h1>
+<p>學期心得:這學期學到的程式及繪圖軟體都是新穎的，從來沒用過，並且還學習到了wink的使用，經過了組長以及同學還有老師的教誨，在這學期的功課都有盡全力去做，雖然可能有些進度並無完全達成，但還是會努力的。</p>
+<p></p><h1>Task</h1>
 <h2>hwpage</h2>
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 48pt;" width="64">
 <tbody>
@@ -421,4 +421,4 @@ frameStops: {
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/Ds0PBMtLm4w" width="560"></iframe></span></p>
 <p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
 <p><span></span></p>
-<h1><span>期末總結</span></h1>
+<h1>期末總結</h1>
