--- a/content/index.html
+++ b/content/index.html
@@ -144,8 +144,8 @@ img.add_border {
 <p>40923245</p>
 <p>網站倉儲: <a href="https://github.com/mdecourse/cad2021_hw">https://github.com/mdecourse/cad2021_hw</a></p>
 <p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p>
-<br /> <a href='Task.html'>Next</a> >> Task</div>
+<p>學期心得:這學期學到的程式及繪圖軟體都是新穎的，從來沒用過，並且還學習到了wink的使用，經過了組長以及同學還有老師的教誨，在這學期的功課都有盡全力去做，雖然可能有些進度並無完全達成，但還是會努力的。</p>
+<p></p><br /> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
