--- a/content/期末總結.html
+++ b/content/期末總結.html
@@ -139,7 +139,37 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">期末2 << <a href='期末2.html'>Previous</a> <br /><h1>期末總結</h1><br />期末2 << <a href='期末2.html'>Previous</a> </div>
+    <div id="tipue_search_content">期末2 << <a href='期末2.html'>Previous</a> <br /><h1>期末總結</h1>
+<p>第一階段:零件繪製</p>
+<p><a href="https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88">https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88</a></p>
+<p><a href="https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24">https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24</a></p>
+<p><a href="https://cad.onshape.com/documents/0ea61102b356df2772bde28d/w/cb32f3078e2b71157fe7bb69/e/784d895a4959bc1bcc9abdfd">https://cad.onshape.com/documents/0ea61102b356df2772bde28d/w/cb32f3078e2b71157fe7bb69/e/784d895a4959bc1bcc9abdfd</a></p>
+<p><a href="https://cad.onshape.com/documents/d5352011f2eb4d472bad1a99/w/16416a3fd92438615ea01d9b/e/a6e6c455b2ff64887770adeb">https://cad.onshape.com/documents/d5352011f2eb4d472bad1a99/w/16416a3fd92438615ea01d9b/e/a6e6c455b2ff64887770adeb</a></p>
+<p><a href="https://cad.onshape.com/documents/45b394b19e350b32b49b4db2/w/11ef3f629666e58bb598a55a/e/a920661b4dbaffa59594c00b">https://cad.onshape.com/documents/45b394b19e350b32b49b4db2/w/11ef3f629666e58bb598a55a/e/a920661b4dbaffa59594c00b</a></p>
+<p><a href="https://cad.onshape.com/documents/aa9c8d15172d682c8d4e95db/w/a5cd4db51c1dadcda042cb16/e/e56c0d5f6be4dd2081adf28b">https://cad.onshape.com/documents/aa9c8d15172d682c8d4e95db/w/a5cd4db51c1dadcda042cb16/e/e56c0d5f6be4dd2081adf28b</a></p>
+<p><a href="https://cad.onshape.com/documents/183c09185134c08765fbbd22/w/f67a5bce63aae5176ca91a88/e/8aa2564b460b66be1dc7f7b7">https://cad.onshape.com/documents/183c09185134c08765fbbd22/w/f67a5bce63aae5176ca91a88/e/8aa2564b460b66be1dc7f7b7</a></p>
+<p><a href="https://cad.onshape.com/documents/028675840837dd21cdb28b31/w/26c0f89cb9d6951b0064b601/e/b86c1a19518e8282003a066a">https://cad.onshape.com/documents/028675840837dd21cdb28b31/w/26c0f89cb9d6951b0064b601/e/b86c1a19518e8282003a066a</a></p>
+<p><a href="https://cad.onshape.com/documents/43f9e1ee9c3b351d2b0fc7f0/w/91327c50db17643d64696a6e/e/b86fdf100d981b8763a27d01">https://cad.onshape.com/documents/43f9e1ee9c3b351d2b0fc7f0/w/91327c50db17643d64696a6e/e/b86fdf100d981b8763a27d01</a></p>
+<p><a href="https://cad.onshape.com/documents/9a8b178bda398dd223e36f15/w/eb06206fe47cef5bc6579dea/e/786a8bbb39b6ca08c3e10e7c">https://cad.onshape.com/documents/9a8b178bda398dd223e36f15/w/eb06206fe47cef5bc6579dea/e/786a8bbb39b6ca08c3e10e7c</a></p>
+<p><a href="https://cad.onshape.com/documents/028675840837dd21cdb28b31/w/26c0f89cb9d6951b0064b601/e/b86c1a19518e8282003a066a">https://cad.onshape.com/documents/028675840837dd21cdb28b31/w/26c0f89cb9d6951b0064b601/e/b86c1a19518e8282003a066a</a></p>
+<p><a href="https://cad.onshape.com/documents/7826b575b6562b95a675f1d3/w/d1667f04d906bc88c1dc5b61/e/178d08ee1c24e84359563c04">https://cad.onshape.com/documents/7826b575b6562b95a675f1d3/w/d1667f04d906bc88c1dc5b61/e/178d08ee1c24e84359563c04</a></p>
+<p><a href="https://cad.onshape.com/documents/3fcb9e1fca6115832d910f0e/w/04e168f5b09e7b8b9b2aef88/e/a4df2a98237823170eb10647">https://cad.onshape.com/documents/3fcb9e1fca6115832d910f0e/w/04e168f5b09e7b8b9b2aef88/e/a4df2a98237823170eb10647</a></p>
+<p><a href="https://cad.onshape.com/documents/5a02c7dc4ab1d82e5d353431/w/3d74ed62298cdcf2f6d798bc/e/76732df4c51c5d25582efbac">https://cad.onshape.com/documents/5a02c7dc4ab1d82e5d353431/w/3d74ed62298cdcf2f6d798bc/e/76732df4c51c5d25582efbac</a></p>
+<p><a href="https://cad.onshape.com/documents/a2ccbc2809b7b7cd8a61bde2/w/fd6939db49c1c1c2d7130df1/e/9a738bfbc3dddd4055c5b40e">https://cad.onshape.com/documents/a2ccbc2809b7b7cd8a61bde2/w/fd6939db49c1c1c2d7130df1/e/9a738bfbc3dddd4055c5b40e</a></p>
+<p><a href="https://cad.onshape.com/documents/e5afe26c849fd6b6237ec460/w/fa07bea457dd88a462f9638b/e/e5d6d639f148e512f3a7e09e">https://cad.onshape.com/documents/e5afe26c849fd6b6237ec460/w/fa07bea457dd88a462f9638b/e/e5d6d639f148e512f3a7e09e</a></p>
+<p><a href="https://cad.onshape.com/documents/f7dfe9184b7b26c333a3981a/w/cd9b2a376624485b93dffb93/e/32786477bfb1f58a8326bd4f">https://cad.onshape.com/documents/f7dfe9184b7b26c333a3981a/w/cd9b2a376624485b93dffb93/e/32786477bfb1f58a8326bd4f</a></p>
+<p><a href="https://cad.onshape.com/documents/2a23b60a121f25d9fc8564e0/w/2e8fe5943640ba6aa0d6c1d0/e/ac04c9d390555a60d1f690aa">https://cad.onshape.com/documents/2a23b60a121f25d9fc8564e0/w/2e8fe5943640ba6aa0d6c1d0/e/ac04c9d390555a60d1f690aa</a></p>
+<p><a href="https://cad.onshape.com/documents/3e118e1cbf6795df9673693d/w/9a3dc00e8007cefeae6ec20b/e/7064ec6253a01c11dac25fd5">https://cad.onshape.com/documents/3e118e1cbf6795df9673693d/w/9a3dc00e8007cefeae6ec20b/e/7064ec6253a01c11dac25fd5</a></p>
+<p><a href="https://cad.onshape.com/documents/6e9b8398351e0f4edbc62cab/w/3f5cc28c41c518440af711e1/e/319a13ffe2cb574e69f69e24">https://cad.onshape.com/documents/6e9b8398351e0f4edbc62cab/w/3f5cc28c41c518440af711e1/e/319a13ffe2cb574e69f69e24</a></p>
+<p><a href="https://cad.onshape.com/documents/cde0b361c8be614a16ebaf34/w/29917c209b207a4862612930/e/407626f990d877707e25bd20">https://cad.onshape.com/documents/cde0b361c8be614a16ebaf34/w/29917c209b207a4862612930/e/407626f990d877707e25bd20</a></p>
+<p><a href="https://cad.onshape.com/documents/fe8b090d2f7dd3523fbaa659/w/ce16bca4693f4a8d3773e84d/e/a9dc6cfcca90f18735041004">https://cad.onshape.com/documents/fe8b090d2f7dd3523fbaa659/w/ce16bca4693f4a8d3773e84d/e/a9dc6cfcca90f18735041004</a></p>
+<p><a href="https://cad.onshape.com/documents/61f9c0ea9bc63d66b4594faa/w/684f61856a28ba795961ba3f/e/c6c416ddb1f3000638323cd3">https://cad.onshape.com/documents/61f9c0ea9bc63d66b4594faa/w/684f61856a28ba795961ba3f/e/c6c416ddb1f3000638323cd3</a></p>
+<p><a href="https://cad.onshape.com/documents/651f814d111bb466f10f6814/w/21f0c1ff877c43462f92155c/e/0ce21b7d06c14ff1072a39e8">https://cad.onshape.com/documents/651f814d111bb466f10f6814/w/21f0c1ff877c43462f92155c/e/0ce21b7d06c14ff1072a39e8</a></p>
+<p><a href="https://cad.onshape.com/documents/96dd4e8b897db582fc6ec9a3/w/b937cdb2b45009b5ae3960d1/e/249417cb7690c942bba5c062">https://cad.onshape.com/documents/96dd4e8b897db582fc6ec9a3/w/b937cdb2b45009b5ae3960d1/e/249417cb7690c942bba5c062</a></p>
+<p><a href="https://cad.onshape.com/documents/994961fd3bb187be244ae42f/w/13a15a305c3a77ecf4ba9a1f/e/7bc09099eaa9f5be8f66fed5">https://cad.onshape.com/documents/994961fd3bb187be244ae42f/w/13a15a305c3a77ecf4ba9a1f/e/7bc09099eaa9f5be8f66fed5</a></p>
+<p><a href="https://cad.onshape.com/documents/4e860c758f316fc4745efdef/w/c46ee497ee7177f8cc3b4a99/e/eb90d8ca72897ed9ea9214b6">https://cad.onshape.com/documents/4e860c758f316fc4745efdef/w/c46ee497ee7177f8cc3b4a99/e/eb90d8ca72897ed9ea9214b6</a></p>
+<p><a href="https://cad.onshape.com/documents/713c2ff86ac0b41a3bfbc87b/w/0adf8a106e473157a715619d/e/c8393551755727e66ef55396">https://cad.onshape.com/documents/713c2ff86ac0b41a3bfbc87b/w/0adf8a106e473157a715619d/e/c8393551755727e66ef55396</a></p>
+<p><a href="https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884">https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884</a></p><br />期末2 << <a href='期末2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
