--- a/content/期末總結.html
+++ b/content/期末總結.html
@@ -169,7 +169,10 @@ img.add_border {
 <p><a href="https://cad.onshape.com/documents/994961fd3bb187be244ae42f/w/13a15a305c3a77ecf4ba9a1f/e/7bc09099eaa9f5be8f66fed5">https://cad.onshape.com/documents/994961fd3bb187be244ae42f/w/13a15a305c3a77ecf4ba9a1f/e/7bc09099eaa9f5be8f66fed5</a></p>
 <p><a href="https://cad.onshape.com/documents/4e860c758f316fc4745efdef/w/c46ee497ee7177f8cc3b4a99/e/eb90d8ca72897ed9ea9214b6">https://cad.onshape.com/documents/4e860c758f316fc4745efdef/w/c46ee497ee7177f8cc3b4a99/e/eb90d8ca72897ed9ea9214b6</a></p>
 <p><a href="https://cad.onshape.com/documents/713c2ff86ac0b41a3bfbc87b/w/0adf8a106e473157a715619d/e/c8393551755727e66ef55396">https://cad.onshape.com/documents/713c2ff86ac0b41a3bfbc87b/w/0adf8a106e473157a715619d/e/c8393551755727e66ef55396</a></p>
-<p><a href="https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884">https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884</a></p><br />期末2 << <a href='期末2.html'>Previous</a> </div>
+<p><a href="https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884">https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884</a></p>
+<p></p>
+<p>第二階段:零件組裝(由於Onshape城市遇到技術上的失誤所以改用splidworks製作)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/PIDgZwBCCa8" width="560"></iframe></p><br />期末2 << <a href='期末2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
