--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,7 +5,8 @@
 <p>網站倉儲: <a href="https://github.com/mdecourse/cad2021_hw">https://github.com/mdecourse/cad2021_hw</a></p>
 <p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
 <p>學期心得:這學期學到的程式及繪圖軟體都是新穎的，從來沒用過，並且還學習到了wink的使用，經過了組長以及同學還有老師的教誨，在這學期的功課都有盡全力去做，雖然可能有些進度並無完全達成，但還是會努力的。</p>
-<p></p><h1>Task</h1>
+<p></p>
+<h1>Task</h1>
 <h2>hwpage</h2>
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 48pt;" width="64">
 <tbody>
@@ -422,6 +423,38 @@ frameStops: {
 <p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
 <p><span></span></p>
 <h1>期末總結</h1>
+<p>W11</p>
+<p>四連桿零件尺寸圖:<a href="https://drive.google.com/file/d/1U9BLFsPTiLHcdEjrS513FXmUpSrqOyGJ/view?usp=sharing">連結</a></p>
+<p><img alt="" height="472" src="/images/四連桿圖.png" width="429"/></p>
+<p>四連桿零件+組合(ONS):<a href="https://drive.google.com/drive/folders/1HZ9oM4-pZYsd_FvlK7rnvQlw5WNL93wq?usp=sharing">連結</a></p>
+<p>四連桿作動(Coppeliasim):</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/o0Iq8yipCas" width="560"></iframe></p>
+<p></p>
+<p></p>
+<p>w13</p>
+<h4></h4>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/零件.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
 <p>第一階段:零件繪製</p>
 <p><a href="https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88">https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88</a></p>
 <p><a href="https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24">https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24</a></p>
@@ -452,3 +485,6 @@ frameStops: {
 <p><a href="https://cad.onshape.com/documents/4e860c758f316fc4745efdef/w/c46ee497ee7177f8cc3b4a99/e/eb90d8ca72897ed9ea9214b6">https://cad.onshape.com/documents/4e860c758f316fc4745efdef/w/c46ee497ee7177f8cc3b4a99/e/eb90d8ca72897ed9ea9214b6</a></p>
 <p><a href="https://cad.onshape.com/documents/713c2ff86ac0b41a3bfbc87b/w/0adf8a106e473157a715619d/e/c8393551755727e66ef55396">https://cad.onshape.com/documents/713c2ff86ac0b41a3bfbc87b/w/0adf8a106e473157a715619d/e/c8393551755727e66ef55396</a></p>
 <p><a href="https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884">https://cad.onshape.com/documents/8021983d01f007f157805db5/w/19459bf3cf226a974c4fa75e/e/f59665830864c40ba3f01884</a></p>
+<p></p>
+<p>第二階段:零件組裝(由於Onshape城市遇到技術上的失誤所以改用splidworks製作)</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/PIDgZwBCCa8" width="560"></iframe></p>
