--- a/config/content.htm
+++ b/config/content.htm
@@ -5,7 +5,8 @@
 <p>網站倉儲: <a href="https://github.com/mdecourse/cad2021_hw">https://github.com/mdecourse/cad2021_hw</a></p>
 <p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
 <p>學期心得:這學期學到的程式及繪圖軟體都是新穎的，從來沒用過，並且還學習到了wink的使用，經過了組長以及同學還有老師的教誨，在這學期的功課都有盡全力去做，雖然可能有些進度並無完全達成，但還是會努力的。</p>
-<p></p><h1>Task</h1>
+<p></p>
+<h1>Task</h1>
 <h2>hwpage</h2>
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; width: 48pt;" width="64">
 <tbody>
@@ -422,6 +423,59 @@ frameStops: {
 <p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
 <p><span></span></p>
 <h1>期末總結</h1>
+<p>W11</p>
+<p>四連桿零件尺寸圖:<a href="https://drive.google.com/file/d/1U9BLFsPTiLHcdEjrS513FXmUpSrqOyGJ/view?usp=sharing">連結</a></p>
+<p><img alt="" height="472" src="/images/四連桿圖.png" width="429"/></p>
+<p>四連桿零件+組合(ONS):<a href="https://drive.google.com/drive/folders/1HZ9oM4-pZYsd_FvlK7rnvQlw5WNL93wq?usp=sharing">連結</a></p>
+<p>四連桿作動(Coppeliasim):</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/o0Iq8yipCas" width="560"></iframe></p>
+<p></p>
+<p></p>
+<p>w13</p>
+<p></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/零件.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p></p>
+<p>期末1</p>
+<p>Onshape零件繪製+組裝</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/VE03YEsTj9w" width="560"></iframe></p>
+<p><span>CoppeliaSim作動</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/-wkhHOzM80s" width="560"></iframe></span></p>
+<p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學以及組長，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。也因為這次的功課使我更加熟悉Onshape</p>
+<p></p>
+<p>期末2</p>
+<p><span>Onshape零件繪製(零件圖+繪製過程):</span></p>
+<p><span><img alt="" height="612" src="/images/連桿圖.png" width="494"/></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span>零件組裝:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/KLoDNQDgsd0" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span>Coppeliasim作動:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/Ds0PBMtLm4w" width="560"></iframe></span></p>
+<p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
+<p></p>
 <p>第一階段:零件繪製</p>
 <p><a href="https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88">https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88</a></p>
 <p><a href="https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24">https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24</a></p>
