期末總結 wink絕對網址

--- a/config/content.htm
+++ b/config/content.htm
@@ -423,15 +423,15 @@ frameStops: {
 <p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
 <p><span></span></p>
 <h1>期末總結</h1>
-<p>W11</p>
+<p><span style="color: #ff6600;">W11</span></p>
 <p>四連桿零件尺寸圖:<a href="https://drive.google.com/file/d/1U9BLFsPTiLHcdEjrS513FXmUpSrqOyGJ/view?usp=sharing">連結</a></p>
-<p><img alt="" height="472" src="/images/四連桿圖.png" width="429"/></p>
+<p><img caption="false" height="472" src="https://40923245-1.github.io/cad2021_hw/images/%E5%9B%9B%E9%80%A3%E6%A1%BF%E5%9C%96.png" width="429"/></p>
 <p>四連桿零件+組合(ONS):<a href="https://drive.google.com/drive/folders/1HZ9oM4-pZYsd_FvlK7rnvQlw5WNL93wq?usp=sharing">連結</a></p>
 <p>四連桿作動(Coppeliasim):</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/o0Iq8yipCas" width="560"></iframe></p>
 <p></p>
 <p></p>
-<p>w13</p>
+<p><span style="color: #ff6600;">W13</span></p>
 <p></p>
 <script>
 var winkVideoData = {
@@ -444,7 +444,7 @@ frameStops: {
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/零件.mp4" type="video/mp4"/></video>
+<source src="https://40923245-1.github.io/cad2021_hw/downloads/%E9%9B%B6%E4%BB%B6.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -456,16 +456,16 @@ frameStops: {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p></p>
-<p>期末1</p>
+<p><span style="color: #ff6600;">期末1</span></p>
 <p>Onshape零件繪製+組裝</p>
 <p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/VE03YEsTj9w" width="560"></iframe></p>
 <p><span>CoppeliaSim作動</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/-wkhHOzM80s" width="560"></iframe></span></p>
 <p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學以及組長，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。也因為這次的功課使我更加熟悉Onshape</p>
 <p></p>
-<p>期末2</p>
+<p><span style="color: #ff6600;">期末1延伸</span></p>
 <p><span>Onshape零件繪製(零件圖+繪製過程):</span></p>
-<p><span><img alt="" height="612" src="/images/連桿圖.png" width="494"/></span></p>
+<p><span><img caption="false" height="612" src="https://40923245-1.github.io/cad2021_hw/images/%E9%80%A3%E6%A1%BF%E5%9C%96.png" width="494"/></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
 <p><span></span></p>
 <p><span>零件組裝:</span></p>
@@ -475,7 +475,7 @@ frameStops: {
 <p><span>Coppeliasim作動:</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/Ds0PBMtLm4w" width="560"></iframe></span></p>
 <p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
-<p></p>
+<p><span style="color: #ff6600;">期末2</span></p>
 <p>第一階段:零件繪製</p>
 <p><a href="https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88">https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88</a></p>
 <p><a href="https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24">https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24</a></p>
