--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -432,7 +432,7 @@ frameStops: {
 <p></p>
 <p></p>
 <p>w13</p>
-<h4></h4>
+<p></p>
 <script>
 var winkVideoData = {
 dataVersion: 1,
@@ -455,6 +455,27 @@ frameStops: {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
+<p></p>
+<p>期末1</p>
+<p>Onshape零件繪製+組裝</p>
+<p><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/VE03YEsTj9w" width="560"></iframe></p>
+<p><span>CoppeliaSim作動</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/-wkhHOzM80s" width="560"></iframe></span></p>
+<p>心得:這次的功課學到了如何運用CoppeliaSim及裡面的Dummy，在不太熟悉的情況下問了班上實力較強的同學以及組長，幫助了我許多，希望之後的我能夠越來越順利並且熟能生巧。也因為這次的功課使我更加熟悉Onshape</p>
+<p></p>
+<p>期末2</p>
+<p><span>Onshape零件繪製(零件圖+繪製過程):</span></p>
+<p><span><img alt="" height="612" src="/images/連桿圖.png" width="494"/></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/p2UZBHN5Ie8" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span>零件組裝:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/KLoDNQDgsd0" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span>Coppeliasim作動:</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="315" src="//www.youtube.com/embed/Ds0PBMtLm4w" width="560"></iframe></span></p>
+<p><span>心得:這件零件我比上次更佳的熟練操作方法，希望日後能循序漸進地將所有作品完成</span></p>
+<p></p>
 <p>第一階段:零件繪製</p>
 <p><a href="https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88">https://cad.onshape.com/documents/45faf1df255a7c7c0474e01f/w/8f7a9ec1ddfd4df2941899a7/e/2b483d91f9f5267dcbe94d88</a></p>
 <p><a href="https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24">https://cad.onshape.com/documents/13e5c3a0a8d6b2686b0e6778/w/5fb78cbab9c77f829bed4233/e/59ee08deb20d884bcfb0ac24</a></p>
